<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit.EditGender">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/gender_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/gender" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_toolbar"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:alwaysDrawnWithCache="false"
        android:clickable="true"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="229dp"
        android:focusable="true">

        <RadioButton
            android:id="@+id/woman_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/woman"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/man_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/man"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/more_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_gender_button"
        android:layout_width="@dimen/small_pill_shape_width"
        android:layout_height="@dimen/small_pill_shape_height"
        android:layout_alignBottom="@id/gender_radio_group"
        android:layout_toEndOf="@id/gender_radio_group"
        android:layout_marginStart="50dp"
        app:shapeAppearanceOverlay="@style/PillShapeButton"
        android:text="@string/edit_gender"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/edit_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/gender_radio_group"
        android:layout_toEndOf="@id/gender_radio_group"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/new_gender"
        android:autofillHints=".AUTOFILL_HINTS_GENDER"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/please_specify_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_radio_group"
        android:layout_toEndOf="@id/gender_radio_group"
        android:layout_marginStart="50dp"
        android:text="@string/please_specify"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/use_only_letters_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_radio_group"
        android:layout_toEndOf="@id/gender_radio_group"
        android:layout_marginStart="50dp"
        android:text="@string/please_use_only_letters"
        android:textColor="#FF0000"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_gender_more"
        android:layout_width="@dimen/pill_shape_width"
        android:layout_height="@dimen/pill_shape_height"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_gender"
        app:shapeAppearanceOverlay="@style/PillShapeButton"
        android:text="@string/update_gender"
        android:visibility="invisible"/>

</RelativeLayout>