<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".edit.EditUsername">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/username_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/username" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_below="@id/username_toolbar"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_username"
        android:autofillHints=".AUTOFILL_HINT_USERNAME"/>

    <TextView
        android:id="@+id/warning1_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username"
        android:layout_alignStart="@id/edit_username"
        android:text="@string/name_can_t_be_less_than_2_characters"
        android:textColor="#FA0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warning2_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username"
        android:layout_alignStart="@id/edit_username"
        android:text="@string/name_can_t_be_more_than_20_characters"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warning3_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username"
        android:layout_alignStart="@id/edit_username"
        android:text="@string/please_use_only_letters"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/update_username_success_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username"
        android:layout_alignStart="@id/edit_username"
        android:text="@string/username_update_success"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_username"
        android:layout_width="@dimen/pill_shape_width"
        android:layout_height="@dimen/pill_shape_height"
        android:layout_below="@id/warning1_p2"
        android:layout_marginTop="50dp"
        android:layout_marginStart="75dp"
        android:text="@string/update_username"
        app:shapeAppearanceOverlay="@style/PillShapeButton" />
</RelativeLayout>